--- a/build.gradle
+++ b/build.gradle
@@ -2,9 +2,11 @@ plugins {
 	id 'org.springframework.boot' version '2.4.3'
 	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
 	id 'java'
+	id("java-library") // or id("application")
+
+
+
 }
-
-
 
 group = 'io.quind'
 version = '0.0.1-SNAPSHOT'
